# bof-work-info

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  events.json  events.toml  flake.nix  urls.toml
.github/workflows/: cleanup-merged-pr-branches.yml  update-events.yml
downloader/: Cargo.toml  README.md
downloader/src/: main.rs  sources.rs
events/: BOF2005.toml  BOF2006.toml  BOF2008.toml  BOF2009.toml  BOF2010.toml  BOF2011.toml  BOF2012.toml  BOF2013.toml  BOF21.toml  BOFET.toml  BOFNT.toml  BOFTT.toml  BOFU2015.toml  BOFU2016.toml  BOFU2017.toml  BOFXV.toml  BOFXVI.toml  BOFXVII.toml  G2R2014.toml  G2R2018.toml
fetcher/: Cargo.toml  README.md
fetcher/src/: main.rs
src/: main.rs
