[package]
name = "bof-table-fetch"
version = "0.1.0"
edition = "2024"

[dependencies]
scraper = "0.24"
toml = "0.9.5"
smol = "2.0"
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
surf = "2.3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }