[package]
name = "downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
# 基础依赖
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

# HTTP和异步
surf = { workspace = true }
smol = { workspace = true }

# 文件系统操作
tokio = { workspace = true, features = ["full"] }
walkdir = { workspace = true }

# URL解析和正则
url = { workspace = true }
regex = { workspace = true }

# 进度条
indicatif = { workspace = true }

# 文件类型检测
infer = { workspace = true }
