[package]
name = "downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
# 基础依赖
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

# HTTP和异步
surf = { workspace = true }
smol = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
