[package]
name = "bof-table-fetch"
version = "0.1.0"
edition = "2024"

[dependencies]
scraper = { workspace = true }
toml = { workspace = true }
smol = { workspace = true }
chrono = { workspace = true }
encoding_rs = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
surf = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }